Fix styling for page header and alignment of create/edit nursery
Reviewer: Tiff Go (post commit)

issue: GCP-8937

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -500,7 +500,7 @@ tr.trialInstance {
 }
 .page-header{
 	margin-left: -25px;
-	/*margin-bottom: 0px;*/
+	margin-bottom: 0px;
 }
 #nursery-table, #trial-table{
 	table-layout: fixed;
